@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-10-02T08:32:02Z",
-  "count_outdated" : 805,
-  "uniques_outdated" : 422,
+  "timestamp" : "2022-10-03T02:09:27Z",
+  "count_outdated" : 807,
+  "uniques_outdated" : 423,
   "count" : 835,
   "uniques" : 438,
   "clones" : [
     {
-      "timestamp": "2022-09-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
