@@ -1,15 +1,10 @@
 {
-  "count": 30,
+  "count": 28,
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2022-09-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
