@@ -1,3 +1,11 @@
+2022-10-03T02:09:27Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3171046922
+* notice: last 14d: unq all: 2 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 422 805 / 438 835
+* notice: next accum: outdated-unq outdated-all / unq all: 423 807 / 438 835
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
+* notice: removed / changed dates: [2022-09-18] / [2022-09-19]
+
 2022-10-02T08:32:02Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3167905126
 * notice: last 14d: unq all: 2 30
